commit al master del blog post

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,8 +4,14 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1> inserte texto de blog aqui lolazo</h1>
-    <p> Aqui es el parrafo del inicio</p>
+    <div id="container">
+            <div id="post">
+                <h1> inserte texto de blog aqui lolazo cabronazo </h1>
+                <p> Aqui es el parrafo del inicio 
+                 brrrrrrr los intocables los illuminati xd
+                ete sech y el pepe van a venil pol ti brrrr</p>
+    </div>
+            </div>
 </body>
 
 </html>
