--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera"></div>
+        cabecera
             <div id="post">
                 <h1> inserte texto de blog aqui lolazo cabronazo </h1>
                 <p> Aqui es el parrafo del inicio 
