--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,10 @@
                 <p> Aqui es el parrafo del inicio 
                  brrrrrrr los intocables los illuminati xd
                 ete sech y el pepe van a venil pol ti brrrr</p>
+                <p>Los blogs son la mejor forma de compartir información
+                 y tus ideas. Mucho mas que ir a conferencias o salir en 
+                 Youtube. Excepto si eres un rockstar. Pero estadísticamente 
+                 no lo eres.... por ahora.</p>
     </div>
             </div>
 </body>
